# flake8_strftime

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  __pkginfo__.py  flake8_strftime.py  formate.toml  git_helper.yml  lint_roller.sh  make_conda_recipe.py  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.ci/: actions_deploy_conda.sh  copy_pypi_2_github.py  travis_deploy_conda.sh
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Building.rst  Source.rst  api.rst  codes.rst  conf.py  contributing.rst  docs.rst  index.rst  license.rst  requirements.txt  usage.rst
doc-source/_templates/sidebar/: navigation.html
flake8_strftime/: __init__.py
tests/: flake8_strftime_test.py  requirements.txt
