[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "flake8_strftime"
version = "0.2.1"
description = "A flake8 plugin which checks for use of platform specific strftime codes."
readme = "README.rst"
keywords = [ "flake8", "date", "time", "datetime", "strftime",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/flake8_strftime"
"Issue Tracker" = "https://github.com/domdfcoding/flake8_strftime/issues"
"Source Code" = "https://github.com/domdfcoding/flake8_strftime"
Documentation = "https://flake8_strftime.readthedocs.io/en/latest"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"

[project.entry-points."flake8.extension"]
STRFTIME = "flake8_strftime:Plugin"
